<resources>
    <string name="app_name">NewBTTestApp</string>
    <string name="blank"></string>
    <string name="cancel">Cancel</string>
    <string name="btn_label">Execute</string>
    <string name="txt_hint_btaddress">BD Address</string>
    <string name="txt_hint_command">HID Command</string>
    <string name="ppl_add">+</string>
    <string name="ppl_del">-</string>
    <string name="services_header">Available services</string>
    <string name="select_device">Select</string>
    <string name="showCoverArt">Cover Art</string>
    <string name="showHidHost">Hid host qualification</string>
    <string name="discover_services">Discover</string>
    <string name="add_oob_bond_dev">Add OOB Bond</string>
    <string name="get_link_key">Get Link Key</string>
    <string name="read_local_oob_data">Read LOCAL OOB DATA</string>
    <string name="create_oob_bond">CREATE OOB BOND</string>
    <string name="clear">Clear</string>
    <string name="list_empty">No records found!</string>
    <string name="a2dp_source">A2DP Source</string>
    <string name="a2dp_sink">A2DP Sink</string>
    <string name="a2dp_role">A2DP Role</string>
    <string name="dip_test">Dip Test</string>
    <string name="dialog_title_create_msg_filter">Create message filter:</string>
    <string name="dialog_title_pick_date_time">Pick date and time:</string>
    <string name="title_hfp_test">HFP Test</string>
    <string name="title_pbap_test">PBAP Test</string>
    <string name="title_map_test">MAP Test</string>
    <string name="title_avrcp_test">AVRCP Test</string>
    <string name="title_vcard_filter">Filter Attributes</string>
    <string name="title_message_filter">Select Message Parameters</string>
    <string name="dip_start_test">Start Test</string>
    <string name="dip_test_label">Dip</string>
    <string name="dip_clear">Clear</string>
    <string name="dip_specification_id_title">Specification Id:</string>
    <string name="dip_vendor_id_title">Vendor Id:</string>
    <string name="dip_vendor_id_source_title">Vendor Id Source:</string>
    <string name="dip_product_id_title">Product Id:</string>
    <string name="dip_version_title">Version:</string>
    <string name="dip_primary_record_title">Primary Record:</string>
    <string name="dip_client_executable_url_title">Client Executable Url:</string>
    <string name="dip_service_description_title">Service Description:</string>
    <string name="dip_documentation_url_title">Documentation Url:</string>
    <string name="phonebook_prompt">Choose a phonebook:</string>
    <string name="vcard_format_prompt">Choose a vCard format:</string>
    <string name="max_list_count_prompt">MaxListCount:</string>
    <string name="vcard_header_prompt">vCard header:</string>
    <string name="offset_prompt">Offset value:</string>
    <string name="search">Search</string>
    <string name="pull_phonebook">Pull Phonebook</string>
    <string name="getsize">Get Size</string>
    <string name="abort">Abort</string>
    <string name="pbap_session_key_dialog_header">OBEX session key required</string>
    <string name="pbap_session_key_dialog_title">Type session key for %1$s</string>
    <string name="pbap_authentication_timeout_message">There was time out to input session key with %1$s</string>
    <string name="auth_notif_ticker">OBEX authentication request</string>
    <string name="auth_notif_title">Session key</string>
    <string name="auth_notif_message">Type session key for %1$s</string>
    <string name="get_vcard">Get vCard</string>
    <string name="vcard_suffix_prompt">.vcf</string>
    <string name="search_attribute_prompt">Search Attribute:</string>
    <string name="search_value_prompt">Search Value:</string>
    <string name="search_attribute_name">Name</string>
    <string name="search_attribute_number">Number</string>
    <string name="order_attribute_unordered">Default</string>
    <string name="order_attribute_alphabetical">Alphabetical</string>
    <string name="order_attribute_indexed">Indexed</string>
    <string name="order_attribute_phonetic">Phonetic</string>
    <string name="search_attribute_sound">Sound</string>
    <string name="filter_button">Select Filter Attributes</string>
    <string name="filter_field_version">vCard Version</string>
    <string name="filter_field_fn">Formatted Name</string>
    <string name="filter_field_n">Structured Presentation of Name</string>
    <string name="filter_field_photo">Associated Image or Photo</string>
    <string name="filter_field_bday">Birthday</string>
    <string name="filter_field_adr">Delivery Address</string>
    <string name="filter_field_label">Delivery</string>
    <string name="filter_field_tel">Telephone Number</string>
    <string name="filter_field_email">Electronic Mail Address</string>
    <string name="filter_field_mailer">Electronic Mail</string>
    <string name="filter_field_tz">Time Zone</string>
    <string name="filter_field_geo">Geographic Position</string>
    <string name="filter_field_title">Job</string>
    <string name="filter_field_role">Role within the Organization</string>
    <string name="filter_field_logo">Organization Logo</string>
    <string name="filter_field_agent">vCard of Person Representing</string>
    <string name="filter_field_org">Name of Organization</string>
    <string name="filter_field_note">Comments</string>
    <string name="filter_field_rev">Revision</string>
    <string name="filter_field_sound">Pronunciation of Name</string>
    <string name="filter_field_url">Uniform Resource Locator</string>
    <string name="filter_field_uid">Unique ID</string>
    <string name="filter_field_key">Public Encryption Key</string>
    <string name="filter_field_nickname">Nickname</string>
    <string name="filter_field_categories">Categories</string>
    <string name="filter_field_proid">Product ID</string>
    <string name="filter_field_class">Class information</string>
    <string name="filter_field_sort_string">String used for sorting operations</string>
    <string name="filter_field_x_irmc_call_datetime">Time stamp</string>
    <string name="filter_field_filter">Indicates the usage of a filter</string>
    <string name="vcard21">vCard 2.1</string>
    <string name="vcard30">vCard 3.0</string>
    <string name="set_phonebook">SetPhonebook</string>
    <string-array name="map_message_type_array">
        <item>SMS_GSM</item>
        <item>SMS_CDMA</item>
        <item>EMAIL</item>
        <item>MMS</item>
    </string-array>
    <string-array name="map_message_encoding_array">
        <item></item>
        <item>8BIT</item>
        <item>G-7BIT</item>
        <item>G-7BITEXT</item>
        <item>G-UCS2</item>
        <item>G-8BIT</item>
        <item>C-8BIT</item>
        <item>C-EPM</item>
        <item>C-7ASCII</item>
        <item>C-IA5</item>
        <item>C-UNICODE</item>
        <item>C-SJIS</item>
        <item>C-KOREAN</item>
        <item>C-LATINHEB</item>
        <item>C-LATIN</item>
    </string-array>
    <string-array name="phonebook_arrays">
        <item>telecom/pb.vcf</item>
        <item>telecom/ich.vcf</item>
        <item>telecom/och.vcf</item>
        <item>telecom/mch.vcf</item>
        <item>telecom/cch.vcf</item>
        <item>telecom/fav.vcf</item>
        <item>SIM1/telecom/pb.vcf</item>
        <item>SIM1/telecom/ich.vcf</item>
        <item>SIM1/telecom/och.vcf</item>
        <item>SIM1/telecom/mch.vcf</item>
        <item>SIM1/telecom/cch.vcf</item>
    </string-array>
    <string name="contact_phonelist_hdr">Phone list</string>
    <string name="contact_emaillist_hdr">E-mail list</string>
    <string name="menu_save">Save</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="vcard">vCard</string>
    <string name="download">Download</string>
    <string name="browse">Browse</string>
    <string name="msg_connection_success">Device has been connected.</string>
    <string name="msg_disconnection_success">Device has been disconnected.</string>
    <string name="hfptest_call_state_unknown_text">unknown</string>
    <string name="menu_request_phone_num">Request phone number</string>
    <string name="menu_call_history">Call history</string>
    <string name="call_history_title">Select number:</string>
    <string name="dialpad_number_hint">Click &quot;<sup><small>Re</small></sup>Dial&quot; to redial</string>
    <string name="dialpad_del">Delete</string>
    <string name="dialpad_dial"><sup><small>Re</small></sup>Dial</string>
    <string name="dialpad_memdial">Mem dial</string>
    <string name="dialpad_dtmf">DTMF</string>
    <string name="ind_conn_state">CONN</string>
    <string name="ind_audio_state">AUDIO</string>
    <string name="ind_vr_state">VR</string>
    <string name="ind_inband_state">IN-BAND</string>
    <string name="ind_network_state">NETWORK</string>
    <string name="ind_roaming_state">ROAMING</string>
    <string name="ind_at_command">AT CMD</string>
    <string name="ind_at_send">Send</string>
    <string name="ind_signal_level">signal</string>
    <string name="ind_battery_level">battery</string>
    <string name="ind_operator_unknown">no operator info</string>
    <string name="ind_subscriber_unknown">no subscriber info</string>
    <string name="ind_manfid_unknown">no manufacturer identification info</string>
    <string name="ind_manfmodel_unknown">no manufacturer model info</string>
    <string name="ind_bar">&#x258c;&#x258c;&#x258c;&#x258c;&#x258c;</string>
    <string name="call_state_active">ACTIVE</string>
    <string name="call_state_held">HELD</string>
    <string name="call_state_dialing">DIALING</string>
    <string name="call_state_alerting">ALERTING</string>
    <string name="call_state_incoming">INCOMING</string>
    <string name="call_state_waiting">WAITING</string>
    <string name="call_state_held_by_rnh">R&amp;H</string>
    <string name="call_multiparty">MULTIPARTY</string>
    <string name="call_action_accept">Accept</string>
    <string name="call_action_accept_held">Accept held</string>
    <string name="call_action_merge">Merge calls</string>
    <string name="call_action_hold_and_accept">Hold and accept</string>
    <string name="call_action_swap">Swap calls</string>
    <string name="call_action_release_and_accept">Release and accept</string>
    <string name="call_action_reject">Reject</string>
    <string name="call_action_reject_held">Reject held</string>
    <string name="call_action_terminate">Terminate</string>
    <string name="call_action_hold">Hold</string>
    <string name="call_action_respond_and_hold">Respond and hold</string>
    <string name="call_action_private_mode">Private mode</string>
    <string name="call_action_release_call">Release call</string>
    <string name="call_action_explicit_transfer">Explicit transfer</string>
    <string name="hfptest_result_ok_text">OK</string>
    <string name="hfptest_result_error_text">Error</string>
    <string name="hfptest_result_no_carrier_text">Error: no carrier</string>
    <string name="hfptest_result_busy_text">Error: busy</string>
    <string name="hfptest_result_no_answer_text">Error: no answar</string>
    <string name="hfptest_result_delayed_text">Error: delayed</string>
    <string name="hfptest_result_blacklisted_text">Error: blacklisted</string>
    <string name="hfptest_result_cme_text">Error: CME</string>
    <string name="passthru_play">PLAY</string>
    <string name="passthru_pause">PAUSE</string>
    <string name="passthru_stop">STOP</string>
    <string name="passthru_ff">FF</string>
    <string name="passthru_rewind">RW</string>
    <string name="passthru_forward">NEXT_TR</string>
    <string name="passthru_backward">PREV_TR</string>
    <string name="passthru_volup">VOL_UP</string>
    <string name="passthru_voldown">VOL_DOWN</string>
    <string name="track_number_default">NO_TRACK</string>
    <string name="title_name_default">NO_TITLE</string>
    <string name="artist_name_default">NO_ARTIST</string>
</resources>