<!--
/*
 * Copyright (c) 2013, The Linux Foundation. All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *        * Redistributions of source code must retain the above copyright
 *            notice, this list of conditions and the following disclaimer.
 *        * Redistributions in binary form must reproduce the above copyright
 *            notice, this list of conditions and the following disclaimer in the
 *            documentation and/or other materials provided with the distribution.
 *        * Neither the name of The Linux Foundation nor
 *            the names of its contributors may be used to endorse or promote
 *            products derived from this software without specific prior written
 *            permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NON-INFRINGEMENT ARE DISCLAIMED.    IN NO EVENT SHALL THE COPYRIGHT OWNER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
 * OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 *
 * Changes from Qualcomm Innovation Center are provided under the following license:
 *
 * Copyright (c) 2022 Qualcomm Innovation Center, Inc. All rights reserved.
 * SPDX-License-Identifier: BSD-3-Clause-Clear
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_base_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_base_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:text="@string/a2dp_role"
                style="@style/textview_normal" />

                <RadioGroup
                    style="@style/textview_normal"
                    android:orientation="horizontal"
                    android:gravity="start"
                    android:layout_margin="25dp">
                <RadioButton
                    android:id="@+id/id_a2dp_source"
                    style="@style/textview_normal"
                    android:text="@string/a2dp_source"
                    android:onClick="onRadioButtonClicked"
                    />
                <RadioButton
                    android:id="@+id/id_a2dp_sink"
                    style="@style/textview_normal"
                    android:text="@string/a2dp_sink"
                    android:onClick="onRadioButtonClicked"
                    />
               </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/discover_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/discover_services" />

            <Button
                android:id="@+id/select_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/select_device" />

             <Button
                android:id="@+id/add_oob_bond_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/add_oob_bond_dev" />

             <Button
                android:id="@+id/get_link_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/get_link_key" />

            <Button
                android:id="@+id/read_local_oob_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/read_local_oob_data" />

            <Button
                android:id="@+id/create_oob_bond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/create_oob_bond" />

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showCoveArtActivity"
            android:text="@string/showCoverArt"
            android:layout_below="@id/linearLayout1"
            android:layout_alignEnd="@+id/linearLayout1"
            android:layout_margin="@dimen/activity_base_margin"
            />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginRight="36dp"
            android:onClick="onToggleClicked" android:visibility="gone" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showDipTestActivity"
        android:text="@string/dip_test"
        android:layout_margin="25dp"/>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/services_header"
            style="?android:attr/listSeparatorTextViewStyle" />

    <fragment class="org.codeaurora.bluetooth.newbttestapp.ServicesFragment"
            android:id="@+id/services_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp" />

</LinearLayout>
