<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (c) 2018, The Linux Foundation. All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are
 * met:
 *     * Redistributions of source code must retain the above copyright
 *       notice, this list of conditions and the following disclaimer.
 *     * Redistributions in binary form must reproduce the above
 *       copyright notice, this list of conditions and the following
 *       disclaimer in the documentation and/or other materials provided
 *       with the distribution.
 *     * Neither the name of The Linux Foundation nor the names of its
 *       contributors may be used to endorse or promote products derived
 *       from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
 * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
 * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
 * ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
 * BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
 * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
 * BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 * OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 * IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/id_dip_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/dip_start_test" />
        <Button
            android:id="@+id/id_dip_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/dip_clear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/id_dip_specification_id_title"
            android:layout_width="@dimen/activity_dip_title_width"
            android:layout_height="wrap_content"
            android:text="@string/dip_specification_id_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/id_dip_specification_id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/id_dip_vendor_id_title"
            android:layout_width="@dimen/activity_dip_title_width"
            android:layout_height="wrap_content"
            android:text="@string/dip_vendor_id_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/id_dip_vendor_id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/id_dip_vendor_id_source_title"
            android:layout_width="@dimen/activity_dip_title_width"
            android:layout_height="wrap_content"
            android:text="@string/dip_vendor_id_source_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/id_dip_vendor_id_source_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/id_dip_product_id_title"
            android:layout_width="@dimen/activity_dip_title_width"
            android:layout_height="wrap_content"
            android:text="@string/dip_product_id_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/id_dip_product_id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/id_dip_version_title"
            android:layout_width="@dimen/activity_dip_title_width"
            android:layout_height="wrap_content"
            android:text="@string/dip_version_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/id_dip_version_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/id_dip_primary_record_title"
            android:layout_width="@dimen/activity_dip_title_width"
            android:layout_height="wrap_content"
            android:text="@string/dip_primary_record_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/id_dip_primary_record_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/id_dip_client_executable_url_title"
            android:layout_width="@dimen/activity_dip_title_width"
            android:layout_height="wrap_content"
            android:text="@string/dip_client_executable_url_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/id_dip_client_executable_url_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/id_dip_service_description_title"
            android:layout_width="@dimen/activity_dip_title_width"
            android:layout_height="wrap_content"
            android:text="@string/dip_service_description_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/id_dip_service_description_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/id_dip_documentation_url_title"
            android:layout_width="@dimen/activity_dip_title_width"
            android:layout_height="wrap_content"
            android:text="@string/dip_documentation_url_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/id_dip_documentation_url_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
</LinearLayout>
